kubernetes/manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  type: LoadBalancer
  ports:
    - name: "90"
      port: 90
      targetPort: 80
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
